# fpgaminer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  fpga-miner.c  launch.sh  launcher.sh  libztex.c  libztex.h  miner.h  util.c
algo/: blake256-8.c  blake2s.c  groestl.c  keccak256.c  keccak512.c  lyra2.c  lyra2.h  lyra2re.c  lyra2re.h  lyra2z.c  lyra2z.h  myr-groestl.c  nist5.c  sha2.c  sha2.h  sph_blake.c  sph_blake.h  sph_blake2s.c  sph_blake2s.h  sph_jh.c  sph_jh.h  sponge.c
compat/jansson/: Makefile  cmake_install.cmake
